# qi

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  publish.yml
src/qi/: __init__.py  __main__.py  cli.py
src/qi/commands/: ping.py  run.py
src/qi/lib/: config.py  constants.py  handler.py  llm_client.py  schema.py  session.py  utils.py
src/qi/lib/llm_client/: __init__.py  _google.py  _openai.py  _types.py
src/qi/prompts/: master.py
src/qi/tools/: bash.py
tests/: test_config.py  test_llm_client.py  test_run.py  test_tools.py
