[project]
name = "qi"
version = "0.1.0"
description = "Qi - a coding agent that flows"
authors = [
    { name = "Wil Tan", email = "wil@dready.org" }
]
requires-python = ">=3.12"
dependencies = ["requests>=2.32.0"]

[project.scripts]
qi = "qi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.coverage.run]
source = ["qi"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
