[project]
name = "qi-agent"
version = "0.1.0"
description = "Qi — a minimalist coding agent"
authors = [
    { name = "Wil Tan", email = "wil@dready.org" }
]
license = "ISC"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "rich>=14.0.0",
]

[project.scripts]
qi = "qi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qi"]

[tool.ruff]
target-version = "py311"
line-length = 146

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]

[tool.coverage.run]
source = ["qi"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
